--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_auth: ^3.3.19
+  cloud_firestore: ^3.4.3
+  firebase_core: ^1.20.0
 
 dev_dependencies:
   flutter_test:
